Fix Copy cite command should respect preferences
Fixes #10615